<resources>
    <string name="app_name">IssoMobileApp</string>

    <!-- Backend part (Back4App) -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">FNSnx94x7yrJpMKbhPjPTeRp71kBMXviAxsF2vzQ</string>
    <string name="back4app_client_key">rqS3E51Sx4mJjR4ggxqRzqu8huS1rKLNIDbCfucn</string>
    <string name="enter_password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="enter_email">Почта</string>
    <string name="sign_up_button">Зарегистрироваться</string>
    <string name="sign_in_button">Войти</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="still_not_account">Ещё нет аккаунта?</string>
    <string name="company_name">ISSO</string>
    <string name="email_error">Почта введена неверно</string>
    <string name="password_error">Пароль введён неверно</string>
    <string name="repeat_password_error">Пароли не совпадают</string>
    <string name="username_error">Неверное имя пользователя</string>
    <string name="username">Имя пользователя</string>
    <string name="log_out">Выйти</string>
    <string name="news_text_evp1">Евпатория – это один из древнейших городов мира и крупнейший бальнеологический исторический курорт России. Находится на юго – западном Черноморском побережье Каламитского залива Крымского полуострова. Здесь 2500 лет развивались цивилизации скифов, греков, крымских татар, караимов и других народов Крыма.  В городе сохранилось около 50 памятников исторического наследия, культуры и архитектуры.
                                  Уникальность сочетания сухого климата, моря, песчаных пляжей и грязей озера Мойнаки определило высокий потенциал города Евпатории как одного из лучших лечебно – профилактических курортов России.
                                  Евпатории присвоен статус Всероссийской детской здравницы.
    </string>
    <string name="news_text_sevas1">Севастополь сегодня - крупнейший незамерзающий морской торговый, рыбный порт, промышленный, научно-технический, рекреационный и культурно-исторический центр юго - запада России.
                                    Ландшафт Севастополя определяют многочисленные бухты, продолжающиеся глубокими балками и горными долинами. В пределах региона насчитывается более 30 бухт. Самые крупные из них - Севастопольская, Южная, Стрелецкая, Круглая, Камышовая, Казачья, Балаклавская. Севастопольская и Южная бухты делят город на Северную, Корабельную и Южную стороны. Севастопольская бухта занимает третье место в мире по удобству после Гонконгской и Сиднейской. На территории Севастопольского региона начинаются все три гряды Крымских гор (Внешняя, Внутренняя и Главная). Через него проходит граница двух географических поясов - умеренного и субтропического
                                    По природным ресурсам Севастопольский регион является одним из богатейших в Крыму. Климат мягкий, морской, умеренно-континентальный в предгорьях, умеренно-континентальный с чертами субтропического средиземноморского типа на юго-восточном побережье. Среднемесячная температура воздуха в течение года всегда положительная.
    </string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae purus faucibus ornare suspendisse. Sem et tortor consequat id porta nibh venenatis. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Urna et pharetra pharetra massa. Turpis nunc eget lorem dolor sed viverra ipsum. Nec feugiat nisl pretium fusce id. Libero volutpat sed cras ornare arcu dui. Quis blandit turpis cursus in hac habitasse platea dictumst quisque. Maecenas accumsan lacus vel facilisis volutpat. Aliquet porttitor lacus luctus accumsan tortor. Luctus accumsan tortor posuere ac.
    </string>

    <string-array name="cities">
        <item>Все</item>
        <item>Севастополь</item>
        <item>Евпатория</item>
        <item>Мирный</item>
        <item>Поповка</item>
    </string-array>

    <string-array name="subjects">
        <item>Разработать план здания</item>
        <item>Договориться о встрече</item>
        <item>Жалоба</item>
        <item>Отзыв о работе приложения</item>
    </string-array>

</resources>